--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,17 @@
 sudo: false
 language: python
 python:
-  - "2.6"
   - "2.7"
-  - "3.2"
-  - "3.3"
-  - "3.4"
-  - "3.5"
   - "3.6"
-install: pip install tox-travis
+install:
+  - pip install tox-travis
+  - pip install coveralls
 script: tox
+after_script: coveralls
+notifications:
+  email:
+    recipients:
+      - romary@me.com
+    on_success: change
+    on_failure: always
 
