Fix tox configuration and local tests

--- a/tox.ini
+++ b/tox.ini
@@ -4,7 +4,7 @@ max-line-length = 80
 ignore=F401
 
 [tox]
-envlist = py27, py36, flake8
+envlist = py36, flake8
 
 [testenv]
 deps=
@@ -14,6 +14,6 @@ deps=
 commands=nosetests -v --with-coverage --cover-package=jsonrepo --cover-inclusive --cover-erase tests
 
 [testenv:flake8]
-basepython = python2.7
+basepython = python3.6
 deps = flake8
 commands = flake8 jsonrepo ./tests
